--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -92,7 +92,9 @@ jobs:
       - name: Build Docker Image
         run: |
           cd ceremonyclient
-          task docker:build
+          #task build_node_amd64_linux
+          #task build_qclient_amd64_linux
+          task build
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -103,7 +105,7 @@ jobs:
       - name: Push Docker Image
         run: |
           cd ceremonyclient
-          task docker:push
+          task push
 
       - name: Tag the version in Git
         run: |
