--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -92,9 +92,9 @@ jobs:
       - name: Build Docker Image
         run: |
           cd ceremonyclient
-          #task build_node_amd64_linux
-          #task build_qclient_amd64_linux
-          task build:source:
+          task build_node_amd64_linux
+          task build_qclient_amd64_linux
+          task build
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
