--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,20 +18,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download release file
-        run: |
-          curl -o release.txt https://releases.quilibrium.com/release
-
-      # Don't build again if build failed previously
       - name: Extract current version and check for existing Git tag
         id: version_check
         run: |
-          VERSION=v$(head -n 1 release.txt | grep -oP 'node-\K[\d.]+')
+          curl -o release.txt https://releases.quilibrium.com/release
+          VERSION=$(head -n 1 release.txt | grep -oP 'node-\K[\d.]+')
           if git rev-parse "v$VERSION" >/dev/null 2>&1; then
-            echo "Tag $VERSION already exists. Build not required."
+            echo "Tag v$VERSION already exists. Build not required."
             echo "build_required=false" >> $GITHUB_OUTPUT
           else
-            echo "No existing tag $VERSION. Proceeding with build."
+            echo "No existing tag v$VERSION. Proceeding with build."
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "build_required=true" >> $GITHUB_OUTPUT
           fi
@@ -40,9 +36,10 @@ jobs:
         if: steps.version_check.outputs.build_required == 'true'
         id: tag_check
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" \
-            https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/ceremonyclient/tags/${{ steps.version_check.outputs.version }})
-          if [ "$response" -eq 200 ]; then
+          httpCode=$(curl -s -o /dev/null -w "%{http_code}" \
+            https://hub.docker.com/v2/repositories/vapolia/quilibrium/tags/${{ steps.version_check.outputs.version }})/
+          
+          if [ "$httpCode" -eq 200 ]; then
             echo "Docker tag already exists. Skipping build."
             echo "build_required=false" >> $GITHUB_OUTPUT
           else
@@ -64,22 +61,22 @@ jobs:
       - name: Get version from the above job
         run: |
           echo "version=${{ needs.check-version-exists.outputs.version }}" >> $GITHUB_ENV
-          TRANSFORMED_VERSION=$(echo "${{ env.version }}" | sed -E 's/(v[0-9]+\.[0-9]+\.[0-9]+)\.([0-9]+)/\1-p\2/')
+          TRANSFORMED_VERSION=v$(echo "${{ env.version }}" | sed -E 's/([0-9]+\.[0-9]+\.[0-9]+)\.([0-9]+)/\1-p\2/')
           echo "transformedVersion=$TRANSFORMED_VERSION" >> $GITHUB_ENV
-          echo "Building ${{ env.version }} from tag ${{ env.transformedVersion }}"
+          echo "Using ${{ env.version }} from github tag ${{ env.transformedVersion }}"
 
       #Make sure the job does not run again if an error occured 
       - name: Tag the version in this Git
         if: ${{ github.event_name == 'schedule' }}
         run: |
-          git tag ${{ env.version }}
+          git tag v${{ env.version }}
           git push origin --tags
 
       - name: Clone ceremonyclient
         run: |
           git clone https://github.com/QuilibriumNetwork/ceremonyclient.git
           cd ceremonyclient
-          git checkout -b ${{ env.transformedVersion }}
+          git checkout -b $transformedVersion origin/${{ env.transformedVersion }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -91,21 +88,63 @@ jobs:
         run: |
           cd ceremonyclient
           task status
-      
-      - name: Build Docker Image
+
+      - name: Download node server binaries in /node
+        run: |
+          FILE="release.txt"
+          BASE_URL="https://releases.quilibrium.com"
+          DEST_DIR="node"
+
+          cd ceremonyclient
+          curl -o $FILE https://releases.quilibrium.com/release
+
+          grep "linux-amd64" "$FILE" | while IFS= read -r line || [ -n "$line" ]; do
+              URL="$BASE_URL/$line"
+              DEST_FILE=$(echo "$line" | sed -E 's/(node-)([0-9]+\.[0-9]+\.[0-9]+)\.[0-9]+(-linux-amd64.*)/\1\2\3/')
+              DEST_FILE="$DEST_DIR/$DEST_FILE"
+              
+              echo "Downloading $URL to $DEST_FILE"
+              curl -s -o "$DEST_FILE" "$URL"
+              
+              if [ $? -ne 0 ]; then
+                echo "Error downloading";
+                #exit 1;
+              fi
+          done
+
+      - name: Build qclient
         run: |
           cd ceremonyclient
-          task build_node_amd64_linux
           task build_qclient_amd64_linux
+      
+      - name: Build Image
+        run: |
+          cd ceremonyclient
+
+          sed -i '1s/.*/FROM golang:1.23.3-alpine3.20 AS build/' Dockerfile.release
+          sed -i 's|RUN go build -o qclient ./main.go|RUN cp "client/build/amd64_linux/qclient" "qclient"|' Dockerfile.release
+          sed -i 's/FROM alpine:3.19/FROM debian:bookworm-slim/' Dockerfile.release
           task build
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker Image
+      - name: Push Image to Docker Hub 
         run: |
           cd ceremonyclient
-          task push
+          docker tag quilibrium:release vapolia/quilibrium:latest
+          docker tag quilibrium:release vapolia/quilibrium:${{ env.version }}
+          docker tag quilibrium:release vapolia/quilibrium:${{ env.transformedVersion }}
+          docker push --all-tags vapolia/quilibrium
+
+#docker run -it --entrypoint /bin/sh vapolia/quilibrium:2.0.3-p4
+# docker run -it --name testquil --entrypoint bash 1bcc1d5bebf2
+# docker ps -a
+# docker rm testquil
+# docker images
+# docker rmi HASH_HASH -f
+# cd /usr/local/bin/
+# docker push --all-tags vapolia/quilibrium
