--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,15 +31,13 @@ jobs:
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "build_required=true" >> $GITHUB_OUTPUT
           fi
-          echo "build_required=${build_required}" >> $GITHUB_ENV
-
 
       - name: Check if Docker tag exists
-        if: env.build_required == 'true'
+        if: steps.version_check.outputs.build_required == 'true'
         id: tag_check
         run: |
           httpCode=$(curl -s -o /dev/null -w "%{http_code}" \
-            https://hub.docker.com/v2/repositories/vapolia/quilibrium/tags/${{ steps.version_check.outputs.version }})
+            https://hub.docker.com/v2/repositories/vapolia/quilibrium/tags/${{ steps.version_check.outputs.version }})/
           
           if [ "$httpCode" -eq 200 ]; then
             echo "Docker tag already exists. Skipping build."
@@ -55,30 +53,32 @@ jobs:
     needs: check-version-exists
     if: needs.check-version-exists.outputs.build_required == 'true'
     runs-on: ubuntu-latest
-
+      
     steps:
+      - env:
+          VERSION: ${{needs.check-version-exists.outputs.version}}
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Get version from the above job
         run: |
-          echo "version=${{ needs.check-version-exists.outputs.version }}" >> $GITHUB_ENV
-          TRANSFORMED_VERSION=v$(echo "${{ env.version }}" | sed -E 's/([0-9]+\.[0-9]+\.[0-9]+)\.([0-9]+)/\1-p\2/')
-          echo "transformedVersion=$TRANSFORMED_VERSION" >> $GITHUB_ENV
-          echo "Using $version from github tag $transformedVersion"
+          TRANSFORMED_VERSION=v$(echo "$VERSION" | sed -E 's/([0-9]+\.[0-9]+\.[0-9]+)\.([0-9]+)/\1-p\2/')
+          echo "TRANSFORMED_VERSION=$TRANSFORMED_VERSION" >> $GITHUB_ENV
+          echo "Using $VERSION from github tag $TRANSFORMED_VERSION"
 
       #Make sure the job does not run again if an error occured 
       - name: Tag the version in this Git
         if: ${{ github.event_name == 'schedule' }}
         run: |
-          git tag v${{ env.version }}
+          git tag v$TRANSFORMED_VERSION
           git push origin --tags
 
       - name: Clone ceremonyclient
         run: |
           git clone https://github.com/QuilibriumNetwork/ceremonyclient.git
           cd ceremonyclient
-          git checkout -b ${{ env.transformedVersion }} origin/${{ env.transformedVersion }}
+          git checkout -b $TRANSFORMED_VERSION origin/$TRANSFORMED_VERSION
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -137,9 +137,9 @@ jobs:
       - name: Push Image to Docker Hub 
         run: |
           cd ceremonyclient
-          docker tag quilibrium:release vapolia/quilibrium:latest
-          docker tag quilibrium:release vapolia/quilibrium:${{ env.version }}
-          docker tag quilibrium:release vapolia/quilibrium:${{ env.transformedVersion }}
+          docker tag quilibrium:release "vapolia/quilibrium:latest"
+          docker tag quilibrium:release "vapolia/quilibrium:$VERSION"
+          docker tag quilibrium:release "vapolia/quilibrium:$TRANSFORMED_VERSION"
           docker push --all-tags vapolia/quilibrium
 
 #docker run -it --entrypoint /bin/sh vapolia/quilibrium:2.0.3-p4
@@ -154,7 +154,6 @@ jobs:
 
   update:
     needs: build
-    if: needs.check-version-exists.outputs.build_required == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
