--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -53,10 +53,10 @@ jobs:
     needs: check-version-exists
     if: needs.check-version-exists.outputs.build_required == 'true'
     runs-on: ubuntu-latest
+    env:
+      VERSION: ${{needs.check-version-exists.outputs.version}}
       
     steps:
-      - env:
-          VERSION: ${{needs.check-version-exists.outputs.version}}
 
       - name: Checkout repository
         uses: actions/checkout@v4
