--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -85,7 +85,9 @@ jobs:
 
       - name: Install Go Task
         uses: arduino/setup-task@v2
-
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
       - name: Display infos
         run: |
           cd ceremonyclient
