use pre build qclient binaries

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -93,7 +93,7 @@ jobs:
           cd ceremonyclient
           task status
 
-      - name: Download node server binaries in /node
+      - name: Download node and qclient server binaries in /node and /client
         run: |
           FILE="release.txt"
           BASE_URL="https://releases.quilibrium.com"
@@ -116,17 +116,28 @@ jobs:
               fi
           done
 
-      - name: Build qclient
-        run: |
-          cd ceremonyclient
-          task build_qclient_amd64_linux
-      
+          DEST_DIR="client"
+          grep "linux-amd64" "$FILE" | while IFS= read -r line || [ -n "$line" ]; do
+              URL="$BASE_URL/$line"
+              DEST_FILE=$(echo "$line" | sed -E 's/(qclient-)([0-9]+\.[0-9]+\.[0-9]+)\.[0-9]+(-linux-amd64.*)/\1\2\3/')
+              DEST_FILE="$DEST_DIR/$DEST_FILE"
+          
+              echo "Downloading $URL to $DEST_FILE"
+              curl -s -o "$DEST_FILE" "$URL"
+          
+              if [ $? -ne 0 ]; then
+                echo "Error downloading";
+                #exit 1;
+              fi
+          done
+
       - name: Build Image
         run: |
           cd ceremonyclient
 
           sed -i '1s/.*/FROM golang:1.23.3-alpine3.20 AS build/' Dockerfile.release
-          sed -i 's|RUN go build -o qclient ./main.go|RUN cp "build/amd64_linux/qclient" "qclient"|' Dockerfile.release
+          #qclient-2.0.4-linux-amd64
+          sed -i 's|RUN go build -o qclient ./main.go|RUN cp "qclient-*-linux-amd64" "qclient"|' Dockerfile.release
           sed -i 's/FROM alpine:3.19/FROM debian:bookworm-slim/' Dockerfile.release
           task build
 
