--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -74,10 +74,10 @@ jobs:
           git tag v$TRANSFORMED_VERSION
           git push origin --tags
 
-      - name: Clone ceremonyclient
+      - name: Clone monorepo
         run: |
-          git clone https://github.com/QuilibriumNetwork/ceremonyclient.git
-          cd ceremonyclient
+          git clone https://github.com/QuilibriumNetwork/monorepo.git
+          cd monorepo
 
           # First, try to checkout the tag
           if git ls-remote --tags origin | grep -q "refs/tags/$TRANSFORMED_VERSION$"; then
@@ -88,11 +88,12 @@ jobs:
 
             # Search for merged PR with exact version in title
             PR_DATA=$(curl -s -H "Accept: application/vnd.github+json" \
-              "https://api.github.com/repos/QuilibriumNetwork/ceremonyclient/pulls?state=closed&per_page=100")
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "https://api.github.com/repos/QuilibriumNetwork/monorepo/pulls?state=closed&per_page=100")
 
             # Find PR with exact matching version in title and get merge commit SHA
             MERGE_SHA=$(echo "$PR_DATA" | jq -r --arg ver "v$VERSION" \
-              '.[] | select(.title == $ver) | select(.merged_at != null) | .merge_commit_sha' | head -n 1)
+              '.[] | select(.title == $ver and .merged_at != null) | .merge_commit_sha' | head -n 1)
 
             if [ -z "$MERGE_SHA" ] || [ "$MERGE_SHA" == "null" ]; then
               echo "ERROR: No tag $TRANSFORMED_VERSION found and no merged PR with version v$VERSION exists."
@@ -114,7 +115,7 @@ jobs:
         
       - name: Display infos
         run: |
-          cd ceremonyclient
+          cd monorepo
           task status
 
       - name: Download node and qclient server binaries in /node and /client
@@ -123,7 +124,7 @@ jobs:
           BASE_URL="https://releases.quilibrium.com"
           DEST_DIR="node"
 
-          cd ceremonyclient
+          cd monorepo
           curl -o $FILE https://releases.quilibrium.com/release
 
           grep "linux-amd64" "$FILE" | while IFS= read -r line || [ -n "$line" ]; do
@@ -162,7 +163,7 @@ jobs:
 
       - name: Build Image
         run: |
-          cd ceremonyclient
+          cd monorepo
 
           sed -i '1s/.*/FROM golang:1.23.3-alpine3.20 AS build/' Dockerfile.release
           sed -i 's|RUN go build -o qclient ./main.go|RUN cp "qclient-\${NODE_VERSION}-linux-amd64" "qclient"|' Dockerfile.release
@@ -175,9 +176,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Image to Docker Hub 
+      - name: Push Image to Docker Hub
         run: |
-          cd ceremonyclient
+          cd monorepo
           docker tag quilibrium:release "vapolia/quilibrium:latest"
           docker tag quilibrium:release "vapolia/quilibrium:$VERSION"
           docker tag quilibrium:release "vapolia/quilibrium:$TRANSFORMED_VERSION"
