--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -220,4 +220,5 @@ jobs:
         run: |
           helm upgrade -n vapolia quilibrium helm/quilibrium --install \
             --set persistence.existingClaim=quilibrium \
+            --set service.annotations."metallb\.universe\.tf/allow-shared-ip"=vapolia \
             --set image.tag=${{ needs.build.outputs.docker_tag }}
